--- a/src/main.html
+++ b/src/main.html
@@ -437,6 +437,6 @@
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<script src="../js/movie.js"></script>
+<script src="../js/js.js"></script>
 </body>
 </html>
