modify file name index.html

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
       <div class="box1_Content">
         <div class="content">
-          <p class="box_tag">전공<br>
+          <p class="box_tag">전공
             <li>
               Artificial intelligence
             </li>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="content">
-          <p class="box_tag">프로젝트경험<br>
+          <p class="box_tag">프로젝트경험
             <li>대학교 졸업프로젝트 1회<br>
               (챗봇을 통한 여행지 / MBTI 추천)
             </li>
@@ -83,7 +83,7 @@
         </div>
 
         <div class="content">
-          <p class="box_tag">희망분야<br>
+          <p class="box_tag">희망분야
             <li>백엔드(서비스)</li>
           </p>
         </div>
