modify name index.html

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             <strong>박정현/ 남</strong>
           </p>
           <p>
-            OREUMI10기@.com
+            OREUMI10@.com
           </p>
         </div>
 
