modify file name

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
 
         <div class="content">
           <p class="box_tag">기술
-            <li>초급</li>
+            <li>HTML, CSS, JS 초급</li>
           </p>
         </div>
       </div>
