modify file name index.html

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
 
         <div class="content">
           <p class="box_tag">경력사항
-            <li>신입</li>
+            <li>해당사항 없음</li>
           </p>
         </div>
 
