add final index.html

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,14 @@
 
 <main>
   <div id="mainImage">
-      <div class="mainTitle"><p id="hello">HELLO!</p>
+      <div class="mainTitle">
+        <p id="hello">HELLO!</p>
         I'm someone who dreams of becoming a developer.
         Right now, I'm learning Java, CSS, and HTML
         to build a strong foundation in web development.
         I'm excited to continue growing my skills and work on
-        creating amazing projects in the future. <button id="moreButton">more</button>
+        creating amazing projects in the future.
+        <button id="moreButton">more</button>
       </div>
 
       <div id="backGround">
@@ -138,23 +140,9 @@
       <p id="tvTitle">OREUMI 동물사전에 오신 것을 환영합니다!
         <button id="tvButton2" class="tv">로그아웃</button>
       </p>
+      <div id="imagesBox">
 
-      <img src="../image/dolphin.jpg" class="box2_image" id="animalImages1">
-      <img src="../image/cat.jpg" class="box2_image" id="animalImages2">
-      <img src="../image/owl.jpg" class="box2_image" id="animalImages3">
-      <br>
-      <img src="../image/fox.png" class="box2_image" id="animalImages4">
-      <img src="../image/highland-cattle.jpg" class="box2_image" id="animalImages5">
-      <img src="../image/bear.jpg" class="box2_image" id="animalImages6">
-      <br>
-      <img src="../image/flamingo.jpg" class="box2_image" id="animalImages7">
-      <img src="../image/sheep.jpg" class="box2_image" id="animalImages8">
-      <img src="../image/gorilla.jpg" class="box2_image" id="animalImages9">
-      <br>
-      <img src="../image/elephant.jpg" class="box2_image" id="animalImages10">
-      <img src="../image/eagle.jpg" class="box2_image" id="animalImages11">
-      <img src="../image/tiger.jpg" class="box2_image" id="animalImages12">
-
+      </div>
 
     </div>
     <div id="monitor"></div>
@@ -208,8 +196,8 @@
           <p>멸종위기등급 - 미평가(NE : Not Evaluated, 출처 : IUCN)</p>
         </p>
         <div>
-          한자로는 묘(猫)라 하고, 수고양이를 낭묘(郎猫), 암고양이를 여묘(女猫), 얼룩고양이를 표화묘(豹花猫),
-          들고양이를<br> 야묘(野猫)로 부르기도 한다. <br><br>현재 집에서 기르고 있는 모든 애완용 고양이는 아프리카·남유럽·인도에
+          한자로는 묘라 하고, 수고양이를 낭묘, 암고양이를 여묘, 얼룩고양이를 표화묘,
+          들고양이를 야묘로 부르기도 한다. 현재 집에서 기르고 있는 모든 애완용 고양이는 아프리카·남유럽·인도에
           걸쳐 분포하는 리비아고양이(Felis silvestris lybica)를 사육 순화시킨 것으로, 전세계에서 2억
           마리가 넘게 사육되는 것으로 알려져 있다.<br><br>
 
@@ -292,7 +280,7 @@
           <p>분포 - 분포지 : 한국, 미국, 유럽, 호주</p>
         </p>
         <div>
-          몸은 건장하고 머리가 낮으며, 목 부분의 아랫면에는 많은 육수(肉垂)가 있고, 꼬리는 가늘고 길며 끝에 모총(毛叢)이 있다.
+          몸은 건장하고 머리가 낮으며, 목 부분의 아랫면에는 많은 육수가 있고, 꼬리는 가늘고 길며 끝에 모총이 있다.
           뿔은 암수 모두 있는데, 마디 모양의 융기가 없고 꼬이거나 사리를 트는 일이 없다. 이 중에서 물소류·야크·가얄·밴팅 등은 가축화되어 있다.<br><br>
 
           [네이버 지식백과] 소 (두산백과 두피디아, 두산백과)
@@ -346,9 +334,9 @@
         </p>
         <div>
           3속 5종이 있다. 키 약 1.2m, 몸길이 0.8~1.3m, 몸무게 2.5~3kg이다. 대형 조류이며 다리와 목이 매우 길다. 날개도 크지만 꽁지는 짧다. 얼굴에는 깃털이 없다. 부리는 독특하게 중간 부분에서 밑으로 굽었다.<br><br>
-          민물이나 소금기 있는 물 또는 바닷물이 고인 호수·갯벌 등지에 살면서, 소형 홍학은 조류(藻類)나 규조류를 걸러서 먹고 대형 홍학은 주로 연체동물·갑각류·곤충·환형동물·원생동물 등을 잡아먹는다.<br><br>
+          민물이나 소금기 있는 물 또는 바닷물이 고인 호수·갯벌 등지에 살면서, 소형 홍학은 조류나 규조류를 걸러서 먹고 대형 홍학은 주로 연체동물·갑각류·곤충·환형동물·원생동물 등을 잡아먹는다.<br><br>
 
-          [네이버 지식백과] 홍학류 [flamingo, 紅鶴類] <br> (두산백과 두피디아, 두산백과)
+          [네이버 지식백과] 홍학류 [flamingo] <br> (두산백과 두피디아, 두산백과)
         </div>
       </div>
       <div class="contentDivButton">
@@ -504,6 +492,13 @@
 
 
 
-<footer></footer>
+<footer>
+  <div id="footerDiv">
+    <ul>#이스트소프트</ul>
+    <ul>#오르미</ul>
+    <ul>#백엔드</ul>
+    <ul>#5팀</ul>
+  </div>
+</footer>
 </body>
 </html>
