--- a/src/login.html
+++ b/src/login.html
@@ -5,44 +5,54 @@
   <title>Title</title>
   <style>
     input{
-    width: 200px;
-    height: 30px;
+      width: 300px;
+      height: 60px;
+      margin-top: 30px;
+      font-size: 17px;
     }
 
     body{
-    text-align: center;
+        text-align: center;
     }
 
     button{
-    background: rgba(210, 90, 240);
-    color: white;
-    font-weight: bold;
-    width: 100px;
-    border-color: white;
-    border-radius: 5px;
+        background: rgba(210, 90, 240);
+        color: white;
+        font-weight: bold;
+        width: 200px;
+        height: 40px;
+        border-color: white;
+        border-radius: 5px;
     }
-    button:hover{
-    filter: brightness(90%);
-    cursor: pointer;
-    }
-    button:active{
-    filter: brightness(80%);
-    cursor: pointer;
-    }
-#loginWindow{
 
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    z-index: 100;
+    button:hover{
+        filter: brightness(90%);
+        cursor: pointer;
     }
+
+    button:active{
+        filter: brightness(80%);
+        cursor: pointer;
+    }
+
+    #loginWindow{
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 15%;
+        margin-bottom: auto;
+        z-index: 100;
+    }
+
     #tvButton3{
-    background: linear-gradient(100deg, rgba(255, 205, 220), rgba(100, 40, 255) 80%);
+        background: linear-gradient(100deg, rgba(255, 205, 220), rgba(100, 40, 255) 80%);
+    }
+
+    #tvButton3{
+        margin-top: 5%;
     }
   </style>
 
@@ -52,8 +62,8 @@
   <h3>OREUMI 동물사전</h3>
   <div>
     <form name="log" id="loginForm">
-      <input type="text" name="id" placeholder="Id"><br><br>
-      <input type="password" name="pw" placeholder="Password"><br><br>
+      <input type="text" name="id" placeholder="로그인 버튼 클릭!">
+      <input type="password" name="pw" placeholder="로그인 버튼 클릭!">
       <button id="tvButton3" onclick="popup()">로그인</button>
     </form>
   </div>
