--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
@@ -29,7 +29,7 @@
       </div>
 
       <div id="backGround">
-        <img src="../image/background4.png" style="width: 1200px;">
+        <img src="image/background4.png" style="width: 1200px;">
       </div>
   </div>
 
@@ -43,7 +43,7 @@
       <div class="box1_Content" id="line1">
         <div class="content">
           <p class="box_tag">
-            <img src="../image/profile2.png" id="profile_image">
+            <img src="image/profile2.png" id="profile_image">
           </p>
           <p>
             <strong>박정현/ 남</strong>
@@ -148,7 +148,7 @@
   <div id="popupDiv1" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/dolphin.jpg" id="modalImages1" class="modal_Image">
+        <img src="image/dolphin.jpg" id="modalImages1" class="modal_Image">
       </div>
 
       <div class="contentBox2">
@@ -178,7 +178,7 @@
   <div id="popupDiv2" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/cat.jpg" id="modalImages2" class="modal_Image">
+        <img src="image/cat.jpg" id="modalImages2" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">고양이 [Cat]</p>
@@ -207,7 +207,7 @@
   <div id="popupDiv3" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/owl.jpg" id="modalImages3" class="modal_Image">
+        <img src="image/owl.jpg" id="modalImages3" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">올빼미 [Owl]</p>
@@ -235,7 +235,7 @@
   <div id="popupDiv4" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/fox.png" id="modalImages4" class="modal_Image">
+        <img src="image/fox.png" id="modalImages4" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">여우 [Fox]</p>
@@ -260,7 +260,7 @@
   <div id="popupDiv5" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/highland-cattle.jpg" id="modalImages5" class="modal_Image">
+        <img src="image/highland-cattle.jpg" id="modalImages5" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">소 [Cattle]</p>
@@ -288,7 +288,7 @@
   <div id="popupDiv6" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/bear.jpg" id="modalImages6" class="modal_Image">
+        <img src="image/bear.jpg" id="modalImages6" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">북극곰 [Polar bear]</p>
@@ -315,7 +315,7 @@
   <div id="popupDiv7" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/flamingo.jpg" id="modalImages7" class="modal_Image">
+        <img src="image/flamingo.jpg" id="modalImages7" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">플라밍고 [Flamingo]</p>
@@ -343,7 +343,7 @@
   <div id="popupDiv8" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/sheep.jpg" id="modalImages8" class="modal_Image">
+        <img src="image/sheep.jpg" id="modalImages8" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">양 [Sheep]</p>
@@ -371,7 +371,7 @@
   <div id="popupDiv9" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/gorilla.jpg" id="modalImages9" class="modal_Image">
+        <img src="image/gorilla.jpg" id="modalImages9" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">고릴라 [Gorilla]</p>
@@ -400,7 +400,7 @@
   <div id="popupDiv10" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/elephant.jpg" id="modalImages10" class="modal_Image">
+        <img src="image/elephant.jpg" id="modalImages10" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">코끼리 [Elephant]</p>
@@ -428,7 +428,7 @@
   <div id="popupDiv11" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/eagle.jpg" id="modalImages11" class="modal_Image">
+        <img src="image/eagle.jpg" id="modalImages11" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">독수리 [Eagle]</p>
@@ -457,7 +457,7 @@
   <div id="popupDiv12" class="modal">
     <div class="contentBox0">
       <div class="contentBox1">
-        <img src="../image/tiger.jpg" id="modalImages12" class="modal_Image">
+        <img src="image/tiger.jpg" id="modalImages12" class="modal_Image">
       </div>
       <div class="contentBox2">
         <p class="modalTitle">호랑이 [Tiger]</p>
@@ -482,7 +482,7 @@
       </div>
     </div>
   </div>
-  <script src="../js/main.js"></script>
+  <script src="js/main.js"></script>
 </main>
 
 
