add final login.html

--- a/login.html
+++ b/login.html
@@ -62,12 +62,13 @@
   <h3>OREUMI 동물사전</h3>
   <div>
     <form name="log" id="loginForm">
-      <input type="text" name="id" placeholder="로그인 버튼 클릭!">
-      <input type="password" name="pw" placeholder="로그인 버튼 클릭!">
+      <input type="text" name="id" placeholder="로그인 버튼 클릭">
+      <input type="password" name="pw" placeholder="로그인 버튼 클릭">
       <button id="tvButton3" onclick="popup()">로그인</button>
     </form>
   </div>
 </div>
+
 
 <script src="js/main.js"></script>
 </body>
